--- a/tickevents-placeholder/package.json
+++ b/tickevents-placeholder/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@mailchimp/mailchimp_marketing": "^3.0.14",
+    "mailchimp-api-v3": "^1.14.0",
+    "ngx-spinner": "^10.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
