--- a/tickevents-placeholder/angular.json
+++ b/tickevents-placeholder/angular.json
@@ -28,7 +28,9 @@
               "src/custom.css",
               "src/assets/fonts/fontnames.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/scrollreveal/dist/scrollreveal.js"
+            ]
           },
           "configurations": {
             "production": {
