--- a/tickevents-placeholder/package.json
+++ b/tickevents-placeholder/package.json
@@ -26,6 +26,7 @@
     "ngx-scrollreveal": "^3.0.0",
     "ngx-spinner": "^10.0.1",
     "rxjs": "~6.5.4",
+    "scrollreveal": "^4.0.7",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
