--- a/tickevents-placeholder/package.json
+++ b/tickevents-placeholder/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "@mailchimp/mailchimp_marketing": "^3.0.14",
+    "@mailchimp/mailchimp_marketing": "^3.0.22",
     "highcharts": "^8.2.0",
     "highcharts-angular": "^2.8.0",
     "mailchimp-api-v3": "^1.14.0",
@@ -29,16 +29,17 @@
     "ngx-spinner": "^10.0.1",
     "rxjs": "~6.5.4",
     "scrollreveal": "^4.0.7",
-    "tslib": "^1.10.0",
+    "tiny-slider": "2.9.2",
+    "tslib": "^1.14.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.7",
     "@angular/cli": "~9.1.7",
     "@angular/compiler-cli": "~9.1.9",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.69",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
