--- a/tickevents-placeholder/package.json
+++ b/tickevents-placeholder/package.json
@@ -27,6 +27,7 @@
     "ngx-parallax": "^4.0.0",
     "ngx-scrollreveal": "^3.0.0",
     "ngx-spinner": "^10.0.1",
+    "rellax": "^1.12.1",
     "rxjs": "~6.5.4",
     "scrollreveal": "^4.0.7",
     "tiny-slider": "2.9.2",
