--- a/tickevents-placeholder/tsconfig.json
+++ b/tickevents-placeholder/tsconfig.json
@@ -16,6 +16,7 @@
       "dom"
     ]
   },
+  "exclude": ["./assets/*.ai", "**/*.spec.ts"],
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
